<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="mulai">mulai</string>
    <string name="monitory_membantu_anda_mengontrol_hp_anak">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="monitory_membantu_anda">Monitory Membantu Anda</string>
    <string name="mengontrol_hp_anak">Mengontrol HP Anak</string>
    <string name="kode_keluarga">Kode Keluarga</string>
    <string name="ketikan_kode_keluarga_yang_ayah_bunda">Ketikan kode keluarga yang Ayah Bunda</string>
    <string name="miliki_disini">miliki disini</string>
    <string name="belum_punya_kode_keluarga">belum punya kode keluarga?</string>
    <string name="beli_kode_keuangan_disini">Beli Kode Keuangan disini</string>
    <string name="dengan_menekan_tombol_masuk_berarti_anda_menyetujui">Dengan menekan tombol masuk berarti anda menyetujui</string>
    <string name="dan">dan</string>
    <string name="ketentuan_pengguna">ketentuan pengguna</string>
    <string name="kebijakan_data">kebijakan data</string>
    <string name="kami">kami</string>
    <string name="masuk">masuk</string>
    <string name="nama_panggilan_kamu">Nama Panggilan Kamu</string>
    <string name="contoh_budi">Contoh: Budi</string>  
    <string name="umur_kamu">Umur Kamu</string>
    <string name="contoh_12">Contoh : 12</string>
    <string name="selanjutnya">selanjutnya</string>
    <string name="beres_sekarang_kamu_udah_bisa_ngecek_penggunaan_hp_mu_tiap_hari_buat_batu_kamu_ngatur_waktu">Beres! Sekarang kamu udah bisa ngecek penggunaan HP mu tiap hari buat batu kamu ngatur waktu :)</string>
    <string name="oke">oke</string>
</resources>
